--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5785,7 +5785,8 @@ button.close {
     background: #fff;
     min-height: 10px;
     overflow: auto;
-    padding-left: 10px; }
+    padding-left: 10px;
+    padding-top: 10px; }
   .md-editor > textarea {
     font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
     font-size: 14px;
