--- a/resources/assets/sass/bootstrap-markdown.scss
+++ b/resources/assets/sass/bootstrap-markdown.scss
@@ -35,6 +35,7 @@ $input-border-focus: #66afe9;
     min-height: 10px;
     overflow: auto;
     padding-left: 10px;
+    padding-top: 10px;
   }
 
   > textarea {
@@ -49,8 +50,7 @@ $input-border-focus: #66afe9;
     padding-top: 10px;
     width: 100%;
     border: 0;
-    // border-top: 1px dashed $table-border-color;
-    // border-bottom: 1px dashed $table-border-color;
+
     border-radius: 0;
     box-shadow: none;
     background: $input-bg-disabled;
