design and layout with Bulma css-framework
Trying out a flexbox based css-framework named bulma instead of
bootstrap.
Design is minimal and focus on the content

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,8 +4,12 @@
 // Utilities
 @import "2-utils/module";
 
-// Bootstrap
-@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+// Bootstrap imports needed for bootstrap markdown
+@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap/variables";
+@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
+@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap/_buttons";
+@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap/_button-groups";
+
 
 // Bootstrap dependant lib-file Markdown library
 @import "1-libs/bootstrap-markdown";
