--- a/resources/assets/sass/1-libs/_bootstrap-markdown.scss
+++ b/resources/assets/sass/1-libs/_bootstrap-markdown.scss
@@ -66,7 +66,7 @@ $input-border-focus: #66afe9;
   &.active {
     border-color: $color;
     outline: 0;
-    @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px $color-rgba);
+    // @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px $color-rgba);
   }
 
   .md-controls {
@@ -189,4 +189,5 @@ $input-border-focus: #66afe9;
   overflow: hidden;
   position: fixed;
   width: 100%;
+  height: 100%;
 }
