--- a/resources/assets/sass/3-base/_typography.scss
+++ b/resources/assets/sass/3-base/_typography.scss
@@ -1,2 +1,13 @@
 // Fonts
-@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Lato', sans-serif;
+}
+
+p {
+  font-family: 'Open Sans', sans-serif;
+}
