--- a/resources/assets/sass/3-base/_layout.scss
+++ b/resources/assets/sass/3-base/_layout.scss
@@ -1,3 +1,14 @@
+.content {
+  a {
+    color: $brand-color !important;
+    text-decoration: none !important;
+  }
+}
+
+
+.section:first-of-type {
+  padding-top: 0px;
+}
 
 .box {
   background-color: white;
