--- a/resources/assets/sass/3-base/_typography.scss
+++ b/resources/assets/sass/3-base/_typography.scss
@@ -11,3 +11,8 @@ h1, h2, h3, h4, h5, h6 {
 p {
   font-family: 'Open Sans', sans-serif;
 }
+
+h1, h2, h3, h4, h5, h6, p {
+  font-size: 1.2em;
+  line-height: 2.3rem;
+}
