--- a/resources/assets/sass/1-libs/_bootstrap-markdown.scss
+++ b/resources/assets/sass/1-libs/_bootstrap-markdown.scss
@@ -41,6 +41,7 @@ $input-border-focus: #66afe9;
   > textarea {
     font-family: $font-family-monospace;
     font-size: $font-size-base;
+    line-height: 1.7rem;
     outline: 0;
     outline: thin dotted  \9; /* IE6-9 */
     margin: 0;
