--- a/resources/assets/sass/3-base/_typography.scss
+++ b/resources/assets/sass/3-base/_typography.scss
@@ -1,18 +1,25 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:700');
 
 
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Lato', sans-serif;
+.brand-font {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
 }
 
-p {
+body {
   font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
 }
+
+.button {
+  font-weight: 600;
+}
+
+
 
 h1, h2, h3, h4, h5, h6, p {
-  font-size: 1.2em;
+  font-size: 1.3em;
   line-height: 2.3rem;
 }
