remove border-bottom from popular-posts list

--- a/resources/assets/sass/3-base/_layout.scss
+++ b/resources/assets/sass/3-base/_layout.scss
@@ -2,7 +2,13 @@
   a {
     color: $brand-color !important;
     text-decoration: none !important;
+
+
   }
+}
+
+.content a:not(.button) {
+  border-bottom: none;
 }
 
 
