--- a/resources/assets/sass/4-components/_post.scss
+++ b/resources/assets/sass/4-components/_post.scss
@@ -2,6 +2,17 @@
 margin-bottom: 15px;
 }
 
+.post.post-segment {
+  color: gray;
+}
+
+.title a {
+  text-decoration: none;
+  color: #4a4a4a;
+
+}
+
+
 .post-actions {
   margin-top: 25px;
 }
