--- a/resources/assets/sass/3-base/_layout.scss
+++ b/resources/assets/sass/3-base/_layout.scss
@@ -18,12 +18,21 @@
 
 .box {
   background-color: white;
-  box-shadow: 0 2px 3px 0 rgba(0,0,0,.08);
+  box-shadow: 0 2px 1px 0 rgba(0,0,0,.08);
   border: none;
+
+  &:not(:last-child) {
+    margin-bottom: 3rem;
+  }
 
   .title {
     padding: 15px 0;
   }
+}
+
+
+.content-wrapper {
+  background-color: $bg-color;
 }
 
 .section.nav-fix {
