slightly darker bg color. better layout of profile aside partial

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -733,7 +733,7 @@ h1, h2, h3, h4, h5, h6, p {
     padding: 15px 0; }
 
 .content-wrapper {
-  background-color: #FBFBFB; }
+  background-color: #FAFAFA; }
 
 .section.nav-fix {
   padding-top: 50px; }
@@ -771,7 +771,7 @@ pre, code {
   padding-right: 10px; }
 
 .footer.is-custom {
-  background-color: #FBFBFB; }
+  background-color: #FAFAFA; }
 
 .hero-title {
   font-size: 3rem; }
